Ensure that remoting_unittests fail when playout delay > 0.

Added NOTREACHED() WebrtcVideoRendererAdapter for the case when playout
delay > 0. Also updated ConnectionTest_Video to receive 5 tests. With
this change remoting_unittests will fail if playout delay extension
is not sent by the host or is ignored on the receiving side. This will
help to prevent regressions like crbug.com/webrtc/7590 in the future.
Previously the adapter was only logging a warning in that case.

BUG=722490

Review-Url: https://codereview.chromium.org/2887183004
Cr-Commit-Position: refs/heads/master@{#473323}

Former-commit-id: 69008afaa78dd9d2fc012b3fcb8f2e0a56fc0a1d